# azolla

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.toml  codecov.yml  docker-compose-dev.yml  docker-compose.yml  grcov.yml  issues.md  py_client_issues.md  rust_client_issues.md  scheduler_plan.md  shepherd_completion_plan.md  tarpaulin.toml  virtual_queue.md
.claude/commands/: commit.md
.gemini/: config.yaml
.github/: codeql-sarif-suppressions.json
.github/actions/rust-setup/: action.yml
.github/codeql/: codeql-config.yml  custom-queries.qls
.github/workflows/: ai.yml  codeql.yml  lint.yml  publish-images.yml  python-tests.yml  rust-setup.yml  tests.yml
clients/: AGENTS.md  README.md
clients/python/: .mypy.ini  CHANGELOG.md  GRPC_INCOMPATIBILITY.md  README.md  pyproject.toml  release.sh
clients/python/examples/: basic_usage.py
clients/python/scripts/: fix_grpc_imports.py  generate_proto.py
clients/python/src/azolla/: __init__.py  _version.py  cli.py  client.py  exceptions.py  retry.py  task.py  types.py  worker.py
clients/python/src/azolla/_grpc/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  orchestrator_pb2.py  orchestrator_pb2.pyi  orchestrator_pb2_grpc.py  shepherd_pb2.py  shepherd_pb2.pyi  shepherd_pb2_grpc.py
clients/python/src/azolla/_internal/: __init__.py  utils.py
clients/python/tests/: __init__.py  conftest.py
clients/python/tests/integration/: README.md  __init__.py  test_e2e_orchestrator.py  utils.py
clients/python/tests/unit/: __init__.py  test_cli_registration.py  test_client.py  test_client_tls.py  test_docs.py  test_exceptions_aliases.py  test_packaging.py  test_retry.py  test_task.py  test_worker_exception_wrapping.py  test_worker_invocation.py  test_worker_jitter.py  test_worker_ready.py
clients/rust/: README.md  release.sh
clients/rust/azolla-client/: Cargo.toml  LICENSE  PUBLISHING.md  build.rs
clients/rust/azolla-client/benches/: conversion_performance.rs  task_execution_performance.rs
clients/rust/azolla-client/coverage/: cobertura.xml
clients/rust/azolla-client/examples/: basic_usage.rs  proc_macro_tasks.rs
clients/rust/azolla-client/proto/: orchestrator.proto  shepherd.proto
clients/rust/azolla-client/src/: client.rs  convert.rs  error.rs  lib.rs  retry_policy.rs  task.rs  worker.rs
clients/rust/azolla-client/tests/: client_connection_edge_cases.rs  client_integration.rs  error_integration.rs  integration.rs  integration_tests.rs  macro_integration.rs  macro_integration.rs.bak  protobuf_integration.rs  unit_tests.rs
clients/rust/azolla-client/tests/integration/: client_integration.rs  end_to_end.rs  error_integration.rs  macro_integration.rs  mod.rs  worker_integration.rs
clients/rust/azolla-client/tests/integration/test_utils/: mock_tasks.rs  mod.rs  orchestrator_manager.rs  shepherd_manager.rs  test_scenarios.rs
clients/rust/azolla-client/tests/test_utils/: test_scenarios.rs
clients/rust/azolla-client/tests/unit/: client_tests.rs  convert_tests.rs  error_tests.rs  mod.rs  retry_policy_tests.rs  task_tests.rs  worker_tests.rs
clients/rust/azolla-client/tests/unit/api/: mod.rs  public_api_tests.rs
clients/rust/azolla-client/tests/unit/api/test_utils/: mock_tasks.rs  mod.rs  test_scenarios.rs
clients/rust/azolla-client/tests/unit/network/: connection_tests.rs  mod.rs  protocol_tests.rs  timeout_tests.rs
clients/rust/azolla-client/tests/unit/network/test_utils/: orchestrator_manager.rs  test_scenarios.rs
clients/rust/azolla-macros/: Cargo.toml
clients/rust/azolla-macros/coverage/: cobertura.xml
clients/rust/azolla-macros/src/: lib.rs
clients/rust/azolla-macros/tests/: integration.rs  unit.rs
config/: default.toml  orchestrator.toml  shepherd.toml
docker/: Dockerfile
docs/: client_library.md  py_client_library.md  retry_policy.md  retry_policy.md.bak  temp_plan.md
examples/: README.md  proc_macro_tasks.rs
examples/python/: __init__.py  basic_client_example.py  basic_worker_example.py
examples/rust/: README.md  basic_client_example.rs  basic_worker_example.rs  benchmark_client_example.rs  benchmark_worker_example.rs  proc_macro_tasks.rs
helm/benchmark/: Chart.yaml  README.md  values.yaml
helm/benchmark/templates/: _helpers.tpl  benchmark-job.yaml  benchmark-role.yaml  benchmark-rolebinding.yaml  benchmark-serviceaccount.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  shepherd-deployment.yaml
migrations/: V1__initial_schema.sql
plans/: scheduler.md
proto/: azolla.proto  common.proto  orchestrator.proto
scripts/: run_benchmark_kind.py
src/: client.rs  db.rs  event_buffer.rs  event_stream.rs  lib.rs  main.rs  proto.rs  server.rs  taskset.rs  test_harness.rs
src/orchestrator/: client_service.rs  cluster_service.rs  db.rs  dispatch_service.rs  engine.rs  event_stream.rs  main.rs  mod.rs  retry_policy.rs  scheduler.rs  server.rs  shepherd_manager.rs  shepherd_registry.rs  startup.rs  taskset.rs
src/orchestrator/tests/: mod.rs
src/shepherd/: config.rs  mod.rs  process_monitor.rs  stream_handler.rs  task_manager.rs  worker_service.rs
tests/: event_stream.rs  integration_tests.rs  integration_tests_main.rs  taskset_db.rs
tests/common/: mod.rs
tests/integration/: README.md  __init__.py  group_routing.rs  life_cycle.rs  mod.rs  retry_mechanism.rs  shepherd_death_test.rs  shepherd_management.rs  task_execution.rs
