[package]
name = "azolla"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "azolla-orchestrator"
path = "src/orchestrator/main.rs"

[[bin]]
name = "azolla-shepherd"
path = "src/bin/azolla-shepherd.rs"

[[bin]]
name = "azolla-worker"
path = "src/bin/azolla-worker.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12"
refinery = { version = "0.8", features = ["tokio-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
config = "0.14"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
rayon = "1.10.0"
futures = "0.3.31"
fastrand = "2.0"
testcontainers = "0.24.0"
openssl = { version = "0.10", features = ["vendored"] }
postgres-openssl = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
